--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Сайтик</title>
 </head>
 <body class="body">
-    <div class="mainbox">
+    <div class="homepadge">
         <header class="header">
             <nav class="nav">
                 <p class="text t1">About Us</p>
@@ -16,10 +16,10 @@
             <p class="text t3">{SimplyOne}</p>
             <p class="text t4">@ Contact Us</p>
         </header>
-        <div class="box1">
-            <div class="box2">
+        <div class="Hero">
+            <div class="_content">
                 <h1>Hello! Nice to meet you!</h1>
-                <div>
+                <div class="description">
                     <p>We are thrilled to have you here on our Hiro Block, the gateway to an extraordinary digital journey. Allow us to introduce ourselves as pioneers in the realm of cutting-edge technology and transformative solutions!</p>
                 </div>
             </div>
