--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
         <div class="Hero">
             <div class="_content">
-                <h1>Hello! Nice to meet you!</h1>
+                <h1 class="maintext">Hello! Nice to meet you!</h1>
                 <div class="description">
                     <p>We are thrilled to have you here on our Hiro Block, the gateway to an extraordinary digital journey. Allow us to introduce ourselves as pioneers in the realm of cutting-edge technology and transformative solutions!</p>
                 </div>
